# bfg-scamhunt

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  analyse.py  api.py  benchmark.py  fly.toml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yaml  deploy.yaml
benchmark/: analyse.py  analysis.json  benchmark.py  dataset.json
benchmark/results/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
bot/: bot.py  extractors.py  facebook.py  feedback.py  handler.py  img_utils.py  instagram.py  link.py  messages.py  ocr.py  openai.py  photo.py  prompts.py  replicate_utils.py  scam_check.py  supabase_utils.py  user_metrics.py  utils.py
bot/db/: embeddings.py  image_hash.py  queue.py  report.py  storage.py  supabase.py  user.py
bot/handler/: callbacks.py  commands.py  receiver.py  utils.py
bot/instagram/: instagram.py
bot/link/: facebook.py  response.py
bot/onboarding/: onboarding.py  onboarding_messages.py
bot/openai/: embeddings.py  ocr.py  prompts.py
