[tool.poetry]
name = "bfg-scamhunt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anyio = "4.4.0"
certifi = "2024.8.30"
exceptiongroup = "1.2.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.9"
python-dotenv = "1.0.1"
python-telegram-bot = "21.5"
sniffio = "1.3.1"
typing-extensions = "4.12.2"
aiograpi = "0.0.3"
annotated-types = "0.7.0"
charset-normalizer = "3.3.2"
decorator = "4.4.2"
imageio = "2.35.1"
imageio-ffmpeg = "0.5.1"
moviepy = "1.0.3"
numpy = "2.1.1"
orjson = "3.10.3"
pillow = "10.4.0"
proglog = "0.1.10"
pycryptodomex = "3.20.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pysocks = "1.7.1"
requests = "2.32.3"
tqdm = "4.66.5"
urllib3 = "1.26.20"
zstandard = "0.22.0"
openai = "1.45.1"
supabase = "2.7.4"
snowflake-id = "^1.0.2"
imagehash = "^4.3.1"
replicate = "^0.33.0"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
appdirs = "1.4.4"
async-timeout = "4.0.3"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
cssselect = "1.2.0"
dateparser = "1.2.0"
demjson3 = "3.0.6"
deprecation = "2.1.0"
distro = "1.9.0"
fake-useragent = "1.5.1"
frozenlist = "1.4.1"
gotrue = "2.8.1"
h2 = "4.1.0"
hpack = "4.0.0"
hyperframe = "6.0.1"
importlib-metadata = "8.5.0"
instaloader = "4.13.1"
jiter = "0.5.0"
lxml = "5.3.0"
lxml-html-clean = "0.2.2"
multidict = "6.1.0"
packaging = "24.1"
parse = "1.20.2"
pipdeptree = "2.23.4"
postgrest = "0.16.11"
pyee = "11.1.1"
pyquery = "2.0.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
realtime = "2.0.2"
regex = "2024.9.11"
six = "1.16.0"
soupsieve = "2.6"
storage3 = "0.7.7"
strenum = "0.4.15"
supafunc = "0.5.1"
tzlocal = "5.2"
w3lib = "2.2.1"
websockets = "12.0"
yarl = "1.11.1"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
